--- a/OS/Seminar-2/rapport.tex
+++ b/OS/Seminar-2/rapport.tex
@@ -73,7 +73,14 @@ the manager want to traverse the free-list, it needs to convert every "pointer"(
 This isn't a big problem when the list is short.
 
 \paragraph{}
-The third and final improvement is the removal of "Free" and "Bfree".
+The third and final improvement is the removal of "Free" and "Bfree". The information those two variables conatined is important for the
+functionality of the manager, but only 1 bit in each of the 16bit variables is used. I realized that both "Size" and "Bsize" are aligned 
+to 8, this means that the 3 least significant bits of those variables are unused. After these realizations the LSB of "Size" is the 
+"Free"-flag and the LSB of "Bsize" is the "Bfree"-flag, this reduced the overhead a further 4 bytes.
+
+This is my personal favorite of the improvements since it was really easy to implement, I just made the manager mask the bits of "Size"
+and "Bsize" to get either the size or the free-flags. Another great thing about this is that (to my knowledge) there are no performance
+tradeofs 
 
 \section{Results}
 
